<resources>
    <string name="app_name">Tap Attack</string>
    <string name="settings">SETTINGS</string>

    <string name="tap_attack">
 <![CDATA[ <b><font color=#000000>TAP<font color=#0000ff>ATTACK</b>]]>
  </string>

    <string name="any_text">
 <![CDATA[ <b><font color=#ff0000>write</b> your <b><font color=#0000ff>text</b> here .

]]>
  </string>

    <string name="styled_welcome_message">We are <b><i>so</i></b> glad to see you.</string>

    <string name="ok">OK</string>
    <string name="on">ON</string>
    <string name="sound">SOUND</string>

    <string name="title_activity_play">PlayActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_menu_fullscreen">MenuFullscreenActivity</string>

    <string name="title_activity_fullscreen_main">FullscreenMainActivity</string>
    <string name="menu"><u>MENU</u></string>
    <string name="store"><u>STORE</u></string>
    <string name="Select">Select</string>
    <string name="exit">EXIT</string>
    <string name="resume">RESUME</string>
    <string name="title_activity_loading">LoadingActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- My Resource Strings -->

    <!-- 1) MainActivityFragment -->
    <string name="percentUnlockedText">%1$d%%</string>
    <string name="highscoreText">Highscore: %1$d</string>
    <string name="currentShields">x%1$d</string>
    <string name="gamemodeTitle">%1$s</string>

    <!-- PaidUnlocksFragment -->
    <string name="morePointsTitle">POINTS &amp; SHIELDS!</string>
    <string name="doublePoints">DOUBLE POINTS</string>
    <string name="morePoints">MORE POINTS</string>
    <string name="shields">SHIELDS</string>
    <string name="shield">SHIELDS</string>
    <string name="starConverter">STAR CONVERTER</string>
    <string name="quantity">%%%1$d</string>
    <string name="shieldsQuantity">x%1$d</string>
    <string name="price">$%1$d</string>
    <string name="pointsQuantity">+%1$dk</string>
    <string name="doublePointsDescription">Earn 2x points per game</string>

   <!-- GameOverReasons -->
  <string name="xTapGameOver">DON\'T TAP THE X</string>
  <string name="warningColorTapGameOver">THE %1$s HAD THE WARNING COLOR</string>
  <string name="shapeLeftScreenGameOver">LOOKS LIKE A %1$s LEFT THE SCREEN</string>
  <string name="wrongShapeTapGameOver">YOU FORGOT TO TAP THE SHAPE FURTHEST DOWN</string>
  <string name="backgroundTapGameOver">YOU MISSED THE SHAPE</string>
  <string name="wrongFlingDirectionGameOver">WRONG FLING DIRECTION FOR THE ARROW</string>
  <string name="wrongShapeActionGameOver">DON\'T %1$s THE %2$s  </string>

    <!-- Game -->
    <string name="startGame">TOUCH TO START</string>



    <!--StoreFragmentOLDment -->
    <string name="itemsUnlockedFraction">%1$d/%2$d</string>
    <string name="randomUnlockText">RANDOM UNLOCK\n %1$d</string>
    <string name="purchaseUnlockText">UNLOCK\n %1$d</string>
    <string name="currentPoints">%1$d</string>


</resources>
