<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_weight="3.5"
        android:layout_margin="15sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <ImageView
            android:id="@+id/title_image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="70sp"
            android:src="@drawable/titleimage1"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/title_image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="70sp"
            android:layout_marginTop="20sp"
            android:adjustViewBounds="true"
            android:layout_below="@id/title_image1"
            android:src="@drawable/titleimage2"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/percent_unlocked_text"
            android:text="@string/percentUnlockedText"
            android:layout_marginTop="10sp"
            android:layout_below="@+id/title_image2"
            android:textColor="@android:color/white"
            android:fontFamily="@font/undinaru"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"/>


        <LinearLayout
            android:id="@+id/shields_and_points_section"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="7sp"
            android:layout_marginRight="25sp"
            android:layout_marginEnd="25sp"
            android:gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/more_points_section"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:id="@+id/points_image"
                    android:src="@drawable/curvedstar"
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/points_text"
                    android:layout_marginLeft="10sp"
                    android:layout_marginStart="10sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/store"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/currentPoints"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:id="@+id/shield_image"
                    android:src="@drawable/shield1"
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/shields_text"
                    android:layout_marginLeft="10sp"
                    android:layout_marginStart="10sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/shieldColor"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/currentShields"/>
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_weight="3.5"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <ImageView
            android:id="@+id/equiped_shield"
            android:src="@drawable/shield1"
            android:layout_gravity="center"
            android:padding="5sp"
            android:layout_width="45sp"
            android:layout_height="45sp"
            tools:ignore="ContentDescription" />
        
        <ImageView
            android:id="@+id/play_button"
            android:layout_marginTop="5sp"
            android:layout_gravity="center"
            android:src="@drawable/startbluebluered"
            android:layout_width="125sp"
            android:layout_height="125sp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/gamemode_title"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:fontFamily="@font/undinaru"
            android:soundEffectsEnabled="false"
            android:text="@string/gamemodeTitle"
            android:textColor="#b0faff"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/highscore_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/highscoreText"
            android:fontFamily="@font/undinaru"
            android:soundEffectsEnabled="false"
            android:textColor="#ffffff"
            android:textSize="15sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_weight="5.5"
        android:orientation="horizontal"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/store_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/undinaru"
            android:text="@string/store"
            android:textColor="#fefa1b"
            android:textSize="45sp" />

        <ImageView
            android:id="@+id/timed_points"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:layout_width="40sp"
            android:layout_height="50sp"
            android:src="@drawable/presenticon"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/settings_text"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/undinaru"
            android:soundEffectsEnabled="false"
            android:text="@string/menu"
            android:textColor="@color/menu"
            android:textSize="45sp"
            tools:ignore="RelativeOverlap" />


    </RelativeLayout>

</LinearLayout>

